# jaas

./: .env  Cargo.toml  Dockerfile  configuration.yaml  file.txt  fly.toml
configuration/: base.yaml  production.yaml
migrations/: 20240511162918_create_subscriptions_table.sql  20240522193751_make_status_not_null_in_subscriptions.sql  20240522194601_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
