[package]
name = "jaas"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jaas"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]


[dependencies.reqwest]
version = "0.12.4"
features = ["json", "rustls-tls"]



[dependencies]
actix-web = "4"
chrono = "0.4.38"
claims = "0.7.1"
config = "0.14.0"
fake = "~2.3"
log = "0.4.21"
once_cell = "1.19.0"
quickcheck = "0.9.2"
quickcheck_macros = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.16"
wiremock = "0.5"

[dev.dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
